<resources>
	<string name="app_name">佑心管理端</string>
	<string name="registerScene">注册设备</string>
	<string name="locX">%1$f</string>
	<string name="locY">%1$f</string>
	<string name="deviceID">设备 ID</string>
	<string name="deviceLoc">位置坐标</string>
	<string name="deviceLocText">设备位置</string>
	<string name="registerDevice">注册</string>
	<string name="project_name">佑心</string>
	<string name="app_name_eng">UrHeart</string>
	<string name="manager">管理端</string>
	<string name="inst_id">机构 ID</string>
	<string name="inst_pass">密码</string>
	<string name="login_button">登录</string>
</resources>
