<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="${relativePackage}.${activityClass}" android:id="@+id/mainLayout" android:clickable="true"
	android:background="@drawable/background_v2">

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/project_name"
		android:id="@+id/textView2" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
		android:layout_marginTop="160dp" android:textSize="30dp" />
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView3"
		android:text="@string/app_name_eng" android:layout_above="@+id/textView_ID"
		android:layout_centerHorizontal="true" android:layout_marginBottom="60dp" android:layout_marginTop="200dp"
		android:textSize="18sp" />
	<TextView android:text="@string/manager" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/textView6" android:layout_above="@+id/textView_ID"
		android:layout_alignEnd="@+id/login_button" android:layout_marginTop="180dp"
		android:layout_marginLeft="230dp" />
	<ImageView android:layout_width="100dp" android:layout_height="100dp"
		android:id="@+id/imageView" android:layout_alignParentTop="true"
		android:layout_alignStart="@+id/login_button" android:layout_marginTop="40dp" android:src="@drawable/logo"
		android:layout_centerHorizontal="true" />
	<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/login_layout"
		android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
		<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number"
			android:ems="10" android:id="@+id/inst_insid" android:maxLength="11" android:textSize="16dp"
			android:layout_centerVertical="true" android:layout_centerHorizontal="true"
			android:layout_marginLeft="30dp" android:layout_marginRight="30dp" android:textColor="#444444"
			android:longClickable="false" android:textColorHint="#AAAAAA"
			android:textStyle="italic" />
		<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inst_password" android:layout_below="@+id/textView_ID"
			android:layout_centerHorizontal="true" android:maxLength="11"
			android:textSize="16dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp"
			android:textColor="#444444" android:textStyle="italic"
			android:textColorHint="#AAAAAA" android:inputType="textPassword" />
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView_ID" android:layout_above="@+id/inst_insid" android:layout_alignStart="@+id/inst_insid"
			android:text="@string/inst_id" android:textSize="16dp"
			android:layout_marginLeft="2dp" />
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inst_pass"
			android:id="@+id/textView_ID" android:layout_below="@+id/inst_insid" android:layout_alignStart="@+id/inst_password"
			android:textSize="16dp" android:layout_marginLeft="2dp" />
		<Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_button"
			android:id="@+id/login_button" android:layout_marginTop="40dp" android:layout_below="@+id/inst_password"
			android:layout_centerHorizontal="true" android:textSize="16dp" android:nestedScrollingEnabled="true"
			android:onClick="login" android:layout_marginLeft="50dp" android:layout_marginRight="50dp"
			android:textColor="#444444" />
	</RelativeLayout>
</RelativeLayout>
